k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: steuritos
  namespace: steuritos
spec:
  selector:
    app: steuritos
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
