k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steuritos
  namespace: steuritos
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: steuritos.ictreloaded.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steuritos
                port:
                  number: 80
